# mfd-package-manager

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: manual_release.yml  pull_requests.yml
examples/: esxi_example.py  factory_example.py  freebsd_example.py  linux_example.py  unix_example.py  windows_example.py
sphinx-doc/: Makefile  README.md  conf.py  generate_docs.py  index.rst
tests/unit/test_mfd_package_manager/: test_base.py  test_bsd.py  test_esxi.py  test_linux.py  test_unix.py  test_windows.py
