[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project]
name = "mfd-package-manager"
description = "Module for managing packages, drivers, and modules across Linux, Windows, ESXi, and FreeBSD systems."
requires-python = ">=3.10, <3.14"
version = "2.23.0"
dynamic = ["dependencies"]
license-files = ["LICENSE.md", "AUTHORS.md"]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/intel/mfd"
Repository = "https://github.com/intel/mfd-package-manager"
Issues = "https://github.com/intel/mfd-package-manager/issues"
Changelog = "https://github.com/intel/mfd-package-manager/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["examples", "tests*", "sphinx-doc"]